--- a/default2.html
+++ b/default2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programa de Entrenamiento N°13 - Fractal</title>
+    <title>Programa de Entrenamiento - Fractal</title>
     <style>
         :root {
             /* Paleta corporativa Fractal */
