--- a/index.html
+++ b/index.html
@@ -2843,7 +2843,7 @@
                             <div class="stat-label">Horas Efectivas</div>
                         </div>
                         <div class="stat-card">
-                            <div class="stat-number">12</div>
+                            <div class="stat-number">20</div>
                             <div class="stat-label">Semanas</div>
                         </div>
                         <div class="stat-card">
@@ -3037,7 +3037,7 @@
                         <div class="component-features">
                             <div class="feature-item">
                                 <span class="feature-icon">✓</span>
-                                <span>Duración: 2 semanas</span>
+                                <span>Duración: 4 semanas</span>
                             </div>
                             <div class="feature-item">
                                 <span class="feature-icon">✓</span>
@@ -3094,7 +3094,7 @@
                         <div class="component-features">
                             <div class="feature-item">
                                 <span class="feature-icon">✓</span>
-                                <span>Duración: 4 semanas</span>
+                                <span>Duración: 8 semanas</span>
                             </div>
                             <div class="feature-item">
                                 <span class="feature-icon">✓</span>
@@ -3156,7 +3156,7 @@
                         <div class="component-features">
                             <div class="feature-item">
                                 <span class="feature-icon">✓</span>
-                                <span>Duración: 2 semanas</span>
+                                <span>Duración: 3 semanas</span>
                             </div>
                             <div class="feature-item">
                                 <span class="feature-icon">✓</span>
@@ -3213,7 +3213,7 @@
                         <div class="component-features">
                             <div class="feature-item">
                                 <span class="feature-icon">✓</span>
-                                <span>Duración: 1 semana</span>
+                                <span>Duración: 3 semana</span>
                             </div>
                             <div class="feature-item">
                                 <span class="feature-icon">✓</span>
@@ -3285,7 +3285,7 @@
                         <div class="component-features">
                             <div class="feature-item">
                                 <span class="feature-icon">✓</span>
-                                <span>Duración: 1 semana</span>
+                                <span>Duración: 2 semana</span>
                             </div>
                             <div class="feature-item">
                                 <span class="feature-icon">✓</span>
@@ -3354,7 +3354,7 @@
                         <div class="component-features">
                             <div class="feature-item">
                                 <span class="feature-icon">✓</span>
-                                <span>Duración: 2 semanas</span>
+                                <span>Duración: 4 semanas</span>
                             </div>
                             <div class="feature-item">
                                 <span class="feature-icon">✓</span>
@@ -3382,7 +3382,7 @@
             <div class="section-header">
                 <div class="section-badge">📅 PLANIFICA TU APRENDIZAJE</div>
                 <h2 class="section-title">Horarios de Clases</h2>
-                <p class="section-description">Martes, Jueves y Sábados | Horarios: 9:00am-11:00am y 4:00pm-6:00pm</p>
+                <p class="section-description">Martes y Jueves | Horario: 4:00pm-6:00pm</p>
             </div>
             <div class="schedule-container">
                 <div class="schedule-tabs">
