--- a/index.html
+++ b/index.html
@@ -2817,6 +2817,10 @@
                             <span class="menu-icon">📅</span>
                             <span>Calendario Visual</span>
                         </a>
+                        <a href="javascript:void(0);" onclick="scrollToSection('ia-techs'); return false;">
+                            <span class="menu-icon">🤖</span>
+                            <span>IA en el Programa</span>
+                        </a>
 
                 </div>
             </div>
@@ -3876,10 +3880,7 @@
                             instructor para cada sesión programada.
                         </p>
                         <div class="preview-features">
-                            <div class="preview-feature-item">
-                                <span class="preview-check">✓</span>
-                                <span>Actualización automática desde Google Sheets</span>
-                            </div>
+
                             <div class="preview-feature-item">
                                 <span class="preview-check">✓</span>
                                 <span>Acceso directo a cada clase programada</span>
@@ -4383,6 +4384,86 @@
                     <div class="legend-item">
                         <div class="legend-box legend-feriado"></div>
                         <span><strong>Feriado</strong></span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- SECCIÓN IA TECHS -->
+        <section class="ia-section" id="ia-techs">
+            <div class="ia-container">
+                <div class="ia-content">
+                    <div class="ia-header">
+                        <div class="ia-icon">🤖</div>
+                        <div class="ia-badge">🚀 FORMACIÓN DEL FUTURO</div>
+                        <h2 class="ia-title">Programa Orientado a Inteligencia Artificial</h2>
+                        <p class="ia-description">
+                            En este programa, <strong>aprenderás a programar usando herramientas de IA</strong>.
+                            Desde el primer día usarás <strong>Claude, ChatGPT y GitHub Copilot</strong>
+                            para escribir código más rápido y aprender mejor.
+                        </p>
+                    </div>
+
+                    <p class="ia-intro">
+                        🎯 Cómo la IA te ayudará en cada módulo del programa:
+                    </p>
+
+                    <div class="ia-grid">
+                        <div class="ia-card">
+                            <div class="ia-card-icon">🎨</div>
+                            <h3 class="ia-card-title">Front-End con Angular</h3>
+                            <p class="ia-card-text">
+                                La IA te ayudará a crear componentes, escribir HTML y CSS,
+                                y entender los errores mientras construyes interfaces web.
+                            </p>
+                        </div>
+
+                        <div class="ia-card">
+                            <div class="ia-card-icon">⚙️</div>
+                            <h3 class="ia-card-title">Back-End con .NET Core</h3>
+                            <p class="ia-card-text">
+                                Usa IA para escribir código en C#, crear APIs y conectar
+                                tu aplicación con bases de datos.
+                            </p>
+                        </div>
+
+                        <div class="ia-card">
+                            <div class="ia-card-icon">☁️</div>
+                            <h3 class="ia-card-title">AWS Cloud</h3>
+                            <p class="ia-card-text">
+                                La IA te guiará para subir tu aplicación a la nube y
+                                configurar los servicios de AWS paso a paso.
+                            </p>
+                        </div>
+
+                        <div class="ia-card">
+                            <div class="ia-card-icon">🏗️</div>
+                            <h3 class="ia-card-title">Arquitectura de Proyecto</h3>
+                            <p class="ia-card-text">
+                                Aprende a organizar tu código y estructurar tus proyectos
+                                con la ayuda de IA para que sean más ordenados.
+                            </p>
+                        </div>
+
+                        <div class="ia-card">
+                            <div class="ia-card-icon">📋</div>
+                            <h3 class="ia-card-title">Gestión de Proyectos</h3>
+                            <p class="ia-card-text">
+                                Usa IA para planificar tus tareas, organizar tu trabajo
+                                y trabajar en equipo con metodologías ágiles.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="ia-footer">
+                        <h3 class="ia-footer-title">🌟 Módulo Exclusivo de IA</h3>
+                        <p class="ia-footer-text">
+                            Además de usar IA en todos los módulos, tendrás <strong>6 sesiones dedicadas
+                                exclusivamente a estas herramientas</strong> con tu instructor
+                            <strong>Cris Alan Bonifaz</strong>. Aprenderás a usar Claude, ChatGPT
+                            y GitHub Copilot de forma profesional. <strong>Este programa te enseña
+                                a programar con IA desde el día uno.</strong>
+                        </p>
                     </div>
                 </div>
             </div>
