--- a/index.html
+++ b/index.html
@@ -1111,6 +1111,8 @@
             border-radius: 20px;
             padding: 25px;
             box-shadow: 0 10px 40px rgba(0, 0, 0, 0.08);
+            min-width: 0;
+            /* Importante para que el grid funcione correctamente */
         }
 
         .month-title {
@@ -1125,6 +1127,8 @@
             display: grid;
             grid-template-columns: repeat(7, 1fr);
             gap: 8px;
+            width: 100%;
+            /* Asegurar que ocupe todo el ancho disponible */
         }
 
         .day-header {
@@ -1151,6 +1155,8 @@
             position: relative;
             min-height: 60px;
             padding: 5px;
+            overflow: hidden;
+            /* Evitar desbordamiento */
         }
 
         .calendar-day:hover:not(.empty) {
@@ -1174,6 +1180,7 @@
             font-weight: 700;
             color: var(--gris-oscuro);
             margin-bottom: 3px;
+            line-height: 1;
         }
 
         .class-tag {
@@ -1186,6 +1193,10 @@
             margin-top: 3px;
             line-height: 1.1;
             color: white;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 100%;
         }
 
         /* Colores por tipo de clase */
@@ -1244,7 +1255,6 @@
         }
 
         /* Estilo para feriados */
-        /* Estilo para feriados */
         .calendar-day.feriado {
             background: linear-gradient(135deg, #e8b4b8 0%, #d4a5a5 100%);
             border: 2px dashed #c48a8e;
@@ -1272,7 +1282,7 @@
         /* Leyenda */
         .calendar-legend {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
             gap: 15px;
             padding: 30px;
             background: var(--azul-muy-claro);
@@ -1338,31 +1348,135 @@
 
             .month-container {
                 padding: 15px;
+                border-radius: 15px;
             }
 
             .calendar-grid {
-                gap: 5px;
+                gap: 4px;
             }
 
             .calendar-day {
-                min-height: 50px;
+                min-height: 45px;
+                border-radius: 6px;
+                padding: 3px;
             }
 
             .day-num {
-                font-size: 14px;
+                font-size: 13px;
             }
 
             .class-tag {
-                font-size: 8px;
-                padding: 2px 4px;
+                font-size: 7px;
+                padding: 2px 3px;
+                border-radius: 4px;
             }
 
             .month-title {
                 font-size: 20px;
+                margin-bottom: 15px;
+            }
+
+            .day-header {
+                font-size: 10px;
+                padding: 8px 2px;
             }
 
             .calendar-legend {
                 grid-template-columns: 1fr;
+                padding: 20px;
+                gap: 12px;
+            }
+
+            .legend-item {
+                font-size: 13px;
+            }
+
+            .legend-box {
+                width: 25px;
+                height: 25px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .calendar-visual-section {
+                padding: 40px 15px;
+            }
+
+            .month-container {
+                padding: 12px;
+                border-radius: 12px;
+            }
+
+            .months-grid {
+                gap: 20px;
+            }
+
+            .calendar-grid {
+                gap: 3px;
+            }
+
+            .calendar-day {
+                min-height: 40px;
+                border-radius: 5px;
+                padding: 2px;
+                border-width: 1px;
+            }
+
+            .day-num {
+                font-size: 12px;
+                margin-bottom: 2px;
+            }
+
+            .class-tag {
+                font-size: 6px;
+                padding: 1px 2px;
+                margin-top: 2px;
+            }
+
+            .month-title {
+                font-size: 18px;
+                margin-bottom: 12px;
+            }
+
+            .day-header {
+                font-size: 9px;
+                padding: 6px 1px;
+            }
+
+            .feriado-icon {
+                font-size: 8px;
+                top: 2px;
+                right: 2px;
+            }
+
+            .section-title {
+                font-size: 26px;
+            }
+
+            .section-description {
+                font-size: 15px;
+            }
+        }
+
+        @media (max-width: 360px) {
+            .calendar-day {
+                min-height: 35px;
+            }
+
+            .day-num {
+                font-size: 11px;
+            }
+
+            .class-tag {
+                font-size: 5px;
+            }
+
+            .month-title {
+                font-size: 16px;
+            }
+
+            .day-header {
+                font-size: 8px;
             }
         }
 
