--- a/index.html
+++ b/index.html
@@ -4512,9 +4512,8 @@
                         <div class="ia-badge">🚀 FORMACIÓN DEL FUTURO</div>
                         <h2 class="ia-title">Programa Orientado a Inteligencia Artificial</h2>
                         <p class="ia-description">
-                            En este programa, <strong>aprenderás a programar usando herramientas de IA</strong>.
-                            Desde el primer día usarás <strong>Claude, ChatGPT y GitHub Copilot</strong>
-                            para escribir código más rápido y aprender mejor.
+                            En este programa, utilizarás herramientas IA como <strong>Claude, ChatGPT y GitHub Copilot</strong>
+                            para programar de manera más eficiente, acelerar tu aprendizaje y mejorar la calidad de tu código desde el primer día.
                         </p>
                     </div>
 
@@ -4570,13 +4569,10 @@
                     </div>
 
                     <div class="ia-footer">
-                        <h3 class="ia-footer-title">🌟 Módulo Exclusivo de IA</h3>
+                        <h3 class="ia-footer-title">🌟 Transformación Digital en tu Desarrollo</h3>
                         <p class="ia-footer-text">
-                            Además de usar IA en todos los módulos, tendrás <strong>6 sesiones dedicadas
-                                exclusivamente a estas herramientas</strong> con tu instructor
-                            <strong>Cris Alan Bonifaz</strong>. Aprenderás a usar Claude, ChatGPT
-                            y GitHub Copilot de forma profesional. <strong>Este programa te enseña
-                                a programar con IA desde el día uno.</strong>
+                            Este programa te sumergirá en el uso de la Inteligencia Artificial para transformar tu manera de programar. 
+                            A lo largo del curso, optimizarás tus procesos de desarrollo, mejorando la productividad y calidad de tus proyectos desde el primer día.
                         </p>
                     </div>
                 </div>
